[gd_scene load_steps=23 format=3 uid="uid://dgdihehpswbbi"]

[ext_resource type="Script" uid="uid://c0kj8tmb8llac" path="res://source/world/map/starfield_background.gd" id="1_e4kyq"]
[ext_resource type="Shader" uid="uid://cx4y87ca5bvg5" path="res://assets/map/backgrounds/starfield.gdshader" id="1_ilmb8"]
[ext_resource type="Texture2D" uid="uid://u2dm7lec8yfs" path="res://assets/map/backgrounds/dark_stars_background.png" id="3_ltg3v"]
[ext_resource type="Texture2D" uid="uid://duxxmag8t2co6" path="res://assets/map/backgrounds/light_stars_background.png" id="4_wfv8f"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e4kyq"]
resource_local_to_scene = true
shader = ExtResource("1_ilmb8")
shader_parameter/offset = Vector2(0, 0)
shader_parameter/background_color = Color(0.92941177, 0.92941177, 0.92941177, 1)
shader_parameter/stars_color = Color(0.06666667, 0.06666667, 0.06666667, 1)
shader_parameter/stars_scroll_scale = 0.01
shader_parameter/stars_amount = 0.002

[sub_resource type="AtlasTexture" id="AtlasTexture_e6ov3"]
atlas = ExtResource("3_ltg3v")
region = Rect2(0, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_41hg4"]
atlas = ExtResource("3_ltg3v")
region = Rect2(320, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsu3g"]
atlas = ExtResource("3_ltg3v")
region = Rect2(640, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_1dvi5"]
atlas = ExtResource("3_ltg3v")
region = Rect2(960, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ceqs"]
atlas = ExtResource("3_ltg3v")
region = Rect2(1280, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5odx"]
atlas = ExtResource("3_ltg3v")
region = Rect2(1600, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdr8d"]
atlas = ExtResource("3_ltg3v")
region = Rect2(1920, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnnwy"]
atlas = ExtResource("3_ltg3v")
region = Rect2(2240, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_h5pkh"]
atlas = ExtResource("4_wfv8f")
region = Rect2(0, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpljc"]
atlas = ExtResource("4_wfv8f")
region = Rect2(320, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xotm"]
atlas = ExtResource("4_wfv8f")
region = Rect2(640, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_smfn4"]
atlas = ExtResource("4_wfv8f")
region = Rect2(960, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqm2i"]
atlas = ExtResource("4_wfv8f")
region = Rect2(1280, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_n30hg"]
atlas = ExtResource("4_wfv8f")
region = Rect2(1600, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_xf11c"]
atlas = ExtResource("4_wfv8f")
region = Rect2(1920, 0, 320, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_k75o8"]
atlas = ExtResource("4_wfv8f")
region = Rect2(2240, 0, 320, 180)

[sub_resource type="SpriteFrames" id="SpriteFrames_wfv8f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6ov3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41hg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsu3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1dvi5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ceqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5odx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdr8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnnwy")
}],
"loop": true,
"name": &"dark",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h5pkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpljc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xotm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smfn4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqm2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n30hg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xf11c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k75o8")
}],
"loop": true,
"name": &"light",
"speed": 8.0
}]

[node name="StarfieldBackground" type="Node2D"]
texture_filter = 1
script = ExtResource("1_e4kyq")

[node name="ShaderParallax" type="Parallax2D" parent="."]
scroll_scale = Vector2(0, 0)

[node name="Base" type="ColorRect" parent="ShaderParallax"]
material = SubResource("ShaderMaterial_e4kyq")
offset_right = 320.0
offset_bottom = 180.0

[node name="PixelArtParallax" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.01, 0.01)
repeat_size = Vector2(320, 180)

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="PixelArtParallax"]
sprite_frames = SubResource("SpriteFrames_wfv8f")
animation = &"light"
centered = false
